tests/snapshots/eval__functions__fn_passed_as_argument.snap
---
source: tests/eval.rs
expression: "run(\"fn apply(f, x) { f(x) }\\nfn dbl(n) { n * 2 }\\nprint(apply(dbl, 5))\")"
---
Ok(
    "10\n",
)
