tests/snapshots/eval__functions__fn_redeclares_existing_name.snap
---
source: tests/eval.rs
expression: "run(\"const foo = 1\\nfn foo() { }\")"
---
Err(
    EvalError {
        category: Name,
        message: "`foo` is already defined in this scope",
        span: Span {
            start: 14,
            end: 26,
        },
        cause: None,
    },
)
