tests/snapshots/eval__functions__fn_stored_in_object.snap
---
source: tests/eval.rs
expression: "run(\"const o = {f: fn(x) { x + 1 }}\\nprint(o.f(41))\")"
---
Ok(
    "42\n",
)
