tests/snapshots/eval__functions__fn_then_fn_same_name.snap
---
source: tests/eval.rs
expression: "run(\"fn foo() { }\\nfn foo() { }\")"
---
Err(
    EvalError {
        category: Name,
        message: "`foo` is already defined in this scope",
        span: Span {
            start: 13,
            end: 25,
        },
        cause: None,
    },
)
