tests/snapshots/eval__functions__immediately_invoked.snap
---
source: tests/eval.rs
expression: "run(\"print((fn(x) { x * 2 })(21))\")"
---
Ok(
    "42\n",
)
