tests/snapshots/eval__functions__implicit_last_expr_return.snap
---
source: tests/eval.rs
expression: "run(\"fn f() { 1 + 2 }\\nprint(f())\")"
---
Ok(
    "3\n",
)
