tests/snapshots/eval__functions__last_statement_not_expr_returns_null.snap
---
source: tests/eval.rs
expression: "run(\"fn f() { var x = 1 }\\nprint(f())\")"
---
Ok(
    "null\n",
)
