tests/snapshots/eval__functions__multiple_args.snap
---
source: tests/eval.rs
expression: "run(\"fn add(a, b, c) { a + b + c }\\nprint(add(1, 2, 3))\")"
---
Ok(
    "6\n",
)
