tests/snapshots/eval__functions__named_fn_call.snap
---
source: tests/eval.rs
expression: "run(\"fn greet(n) { \\\"hi, \\\" + n }\\nprint(greet(\\\"Ana\\\"))\")"
---
Ok(
    "hi, Ana\n",
)
