tests/snapshots/eval__functions__named_recursion.snap
---
source: tests/eval.rs
expression: "run(\"fn count(n) { if n == 0 { return }\\nprint(n)\\ncount(n - 1) }\\ncount(3)\")"
---
Ok(
    "3\n2\n1\n",
)
